make bump drive go to closest 22.5 degrees